--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>CSS3D - Periodic Table</title>
 
 	<!-- Add the Google Sign-In script -->
-	<meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+	<meta name="google-signin-client_id" content="782146836024-s25snr3e9450v0s10lra780dfo03ah8v.apps.googleusercontent.com">
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<script src="https://apis.google.com/js/api.js"></script>
 	
