--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
 	<!-- Add the Google Sign-In button -->
 	<!-- <div class="g-signin2" data-onsuccess="onSignIn" data-scope="https://www.googleapis.com/auth/spreadsheets.readonly"></div> -->
 	<div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+	<a href="#" onclick="signOut();">Sign out</a>
+	<script>
+		function signOut() {
+			var auth2 = gapi.auth2.getAuthInstance();
+			auth2.signOut().then(function () {
+				console.log('User signed out.');
+			});
+		}
+	</script>
 	
 	<!-- <script>
 		function onSignIn(googleUser) {
