--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 	<script type="module" src="/assets/vendor/threejs/tween.module.js"></script>
 	<script type="module" src="/assets/vendor/threejs/controls/TrackballControls.js"></script>
 	<script type="module" src="/assets/vendor/threejs/renderers/CSS3DRenderer.js"></script>
-
-</head>
-<body>
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<script src="https://apis.google.com/js/api.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -31,26 +28,33 @@
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
 	<script type="module" src="/assets/js/main.js"></script>
 
+</head>
+<body>
+
 	<div class="container sign-in-wrap">
-		<div class="card">
-			<h2 class="alert alert-primary">Welcome Back</h2>
-			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-			<!-- Add the Google Sign-In button -->
-			<div class="g-signin2" data-onsuccess="onSignIn"></div>
-			<div class="data">
-				<p>Name</p>
-				<p id="name" class="alert alert-success"></p>
-				<img id="image" class="rounded-circle" width="100" height="100"></img>
-				<p>Email</p>
-				<p id="email"></p>
-				<button type="button" class="btn btn-danger" onclick="signOut()">Sign Out</button>
+		<div class="card" style="width: 100%; height: 100%;">
+			<div class="card-header">
+				<h1 style="text-align: center;">Welcome Back</h1>
+				<h5 style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+			</div>
+			<div class="card-body" style="display: flex; justify-content: center;">
+				<!-- Add the Google Sign-In button -->
+				<div class="g-signin2" data-onsuccess="onSignIn"></div>
+				<div class="data">
+					<p>Name</p>
+					<p id="name" class="alert alert-success"></p>
+					<img id="image" class="rounded-circle" width="100" height="100"></img>
+					<p>Email</p>
+					<p id="email"></p>
+					<button type="button" class="btn btn-danger" onclick="signOut()">Sign Out</button>
+				</div>
 			</div>
 		</div>	
 	</div>
 
-	<div id="container"></div>
+	<div id="container" style="display: none;"></div>
 	
-	<div id="menu">
+	<div id="menu" style="display: none;">
 		<button id="table">TABLE</button>
 		<button id="sphere">SPHERE</button>
 		<button id="helix">HELIX</button>
