--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="/assets/css/style.css" />
 	<!-- <script src="/assets/vendor/threejs/three.min.js"></script> -->
+	
+
+</head>
+<body>
+
+
+				<h1 style="text-align: center;">Welcome Back</h1>
+				<h5 style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+
+				<!-- Add the Google Sign-In button -->
+				<div class="g-signin2" data-onsuccess="onSignIn"></div>
+				<div class="data">
+					<p>Name</p>
+					<p id="name" class="alert alert-success"></p>
+					<img id="image" class="rounded-circle" width="100" height="100"></img>
+					<p>Email</p>
+					<p id="email"></p>
+					<button type="button" class="btn btn-danger" onclick="signOut()">Sign Out</button>
+				</div>
+
+	<!-- <div id="container" style="display: none;"></div>
+	
+	<div id="menu" style="display: none;">
+		<button id="table">TABLE</button>
+		<button id="sphere">SPHERE</button>
+		<button id="helix">HELIX</button>
+		<button id="grid">GRID</button>
+		<button id="signout-button">Sign Out</button>
+	</div> -->
+
 	<script type="importmap">
 		{
 			"imports": {
@@ -25,41 +55,7 @@
 	<script src="https://apis.google.com/js/api.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="https://accounts.google.com/gsi/client" async defer></script>
+	<!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
 	<script type="module" src="/assets/js/main.js"></script>
-
-</head>
-<body>
-
-	<div class="container sign-in-wrap">
-		<div class="card" style="width: 100%; height: 100%;">
-			<div class="card-header">
-				<h1 style="text-align: center;">Welcome Back</h1>
-				<h5 style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
-			</div>
-			<div class="card-body" style="display: flex; justify-content: center;">
-				<!-- Add the Google Sign-In button -->
-				<div class="g-signin2" data-onsuccess="onSignIn"></div>
-				<div class="data">
-					<p>Name</p>
-					<p id="name" class="alert alert-success"></p>
-					<img id="image" class="rounded-circle" width="100" height="100"></img>
-					<p>Email</p>
-					<p id="email"></p>
-					<button type="button" class="btn btn-danger" onclick="signOut()">Sign Out</button>
-				</div>
-			</div>
-		</div>	
-	</div>
-
-	<div id="container" style="display: none;"></div>
-	
-	<div id="menu" style="display: none;">
-		<button id="table">TABLE</button>
-		<button id="sphere">SPHERE</button>
-		<button id="helix">HELIX</button>
-		<button id="grid">GRID</button>
-		<button id="signout-button">Sign Out</button>
-	</div>
 </body>
 </html>
