--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 	<title>CSS3D - Periodic Table</title>
 
 	<!-- Add the Google Sign-In script -->
-	
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="/assets/css/style.css" />
 	<!-- <script src="/assets/vendor/threejs/three.min.js"></script> -->
 	
@@ -53,9 +51,30 @@
 	<script type="module" src="/assets/vendor/threejs/renderers/CSS3DRenderer.js"></script>
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<script src="https://apis.google.com/js/api.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
 	<script type="module" src="/assets/js/main.js"></script>
+	<script>
+		function onSignIn(googleUser) {
+			var profile = googleUser.getBasicProfile();
+			$("#name").text(profile.getName());
+			$("#email").text(profile.getEmail());
+			$("#image").attr('src', profile.getImageUrl());
+			$(".data").css("display","block");
+			$(".g-signin2").css("display","none");
+			$("#container").css("display","none");
+			$("#menu").css("display","none");
+
+		}
+
+		function signOut() {
+			var auth2 = gapi.auth2.getAuthInstance();
+			auth2.signOut().then(function () {
+				alert("You have been signed out successfully");
+				$(".g-signin2").css("display", "block");
+				$(".data").css("display","none");
+			});
+		}
+	</script>
 </body>
 </html>
