--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			}
 		}
 	</script>
-	<script type="module" src="/assets/vendor/threejs/tween.module.js"></script>
-	<script type="module" src="/assets/vendor/threejs/controls/TrackballControls.js"></script>
-	<script type="module" src="/assets/vendor/threejs/renderers/CSS3DRenderer.js"></script>
+	<script type="module" src="./assets/vendor/threejs/tween.module.js"></script>
+	<script type="module" src="./assets/vendor/threejs/controls/TrackballControls.js"></script>
+	<script type="module" src="./assets/vendor/threejs/renderers/CSS3DRenderer.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 
 </head>
@@ -29,6 +29,6 @@
 		<button id="grid">GRID</button>
 	</div>
 
-	<script type="module" src="/assets/js/main.js"></script>
+	<script type="module" src="./assets/js/main.js"></script>
 </body>
 </html>
